--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/180/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/180/index.mdx
@@ -7,13 +7,13 @@ date: 04-03-2024
 
 Salut à tous !
 
-As expected, it's been a quiet week, with developers taking a break for Easter.
+Comme prévu, la semaine a été calme, les développeurs ayant fait une pause pour Pâques.
 
-Although we don't have a lot of major releases, we still have a good amount of content and blog posts. I really liked the headline blog post. Only Bun decided to release an outstanding v1.1 release on 1st April, quite a bold move!
+Bien que nous n'ayons pas beaucoup de versions majeures, nous avons toujours une bonne quantité de contenu et d'articles de blog. J'ai beaucoup aimé l'article de blog qui fait la une. Seul Bun a décidé de publier une version exceptionnelle de la v1.1 le 1er avril, ce qui est assez audacieux !
 
-React Native developer? Don’t miss [**App.js Conf**](http://app.js) kicking off on 22 May in Kraków 🇵🇱. Get a [10% discount](https://ti.to/appjs/2024/discount/TWIR) with our partner code “TWIR”.
+Développeur React Native ? Ne manquez pas la [**App.js Conf**](http://app.js) qui débutera le 22 mai à Kraków 🇵🇱. Bénéficiez d'une [réduction de 10 %](https://ti.to/appjs/2024/discount/TWIR) avec notre code partenaire « TWIR ».
 
-Apart that, stay safe and make sure to check if you are [affected by xz](https://socket.dev/blog/how-to-use-socket-to-find-out-if-you-were-affected-by-the-backdoored-xz-package), a major security vulnerability unveiled recently.
+Par ailleurs, soyez vigilant et vérifiez si vous êtes [affecté par xz](https://socket.dev/blog/how-to-use-socket-to-find-out-if-you-were-affected-by-the-backdoored-xz-package), une importante faille de sécurité dévoilée récemment.
 
 <!-- truncate -->
 
@@ -49,15 +49,15 @@ Take the guesswork out of which components to focus on next with Omlet.
 
 [**Global progress in Next.js**](https://buildui.com/posts/global-progress-in-nextjs)
 
-Don’t be misled by the title, this great article is a great illustration of how React transitions work. Easy-to-understand Interactive demos show how setState calls inside a transition can be executed synchronously in a click handler, and yet their application to the DOM will be delayed until the transition can fully complete. Also explains why App Router doesn’t expose a router event system anymore. The animation code is also interesting, based on Framer Motion.
+Ne vous laissez pas tromper par le titre, cet article est une excellente illustration du fonctionnement des transitions React. Des démos interactives faciles à comprendre montrent comment les appels setState à l'intérieur d'une transition peuvent être exécutés de manière synchrone dans un click handler, et pourtant leur application au DOM sera retardée jusqu'à ce que la transition soit complètement terminée. Cela explique aussi pourquoi App Router n'expose plus de système d'événements pour le routeur. Le code d'animation est également intéressant, basé sur Framer Motion.
 
 ---
 
 - 💸 [React app authentication and user management secured by Clerk, ensuring a quick setup with pre-built components.](https://go.clerk.com/WBJx175)
-- 👀 [The road to Fresh 2.0](https://github.com/denoland/fresh/issues/2363): The Deno/Preact framework should get async components support.
+- 👀 [The road to Fresh 2.0](https://github.com/denoland/fresh/issues/2363) : Le framework Deno/Preact devrait supporter les composants asynchrones.
 - 📣 [Netlify - Introducing the new Next.js Runtime](https://www.netlify.com/blog/introducing-the-new-next-js-runtime/)
-- 📜 [Expose Platform APIs Over Wrapping Them](https://blog.jim-nielsen.com/2024/expose-platform-apis-over-wrapping-them/): An interesting critique of the Next.js metadata API design, that has a learning curve and is not a direct mapping to HTML meta tags. Compares tradeoffs with a more ad-hoc, portable solution.
-- 📜 [Exploring Authentication in Next.js](https://www.robinwieruch.de/next-authentication/): Comprehensive auth tutorial using Next.js 14, App Router, Prisma, Lucia.
+- 📜 [Expose Platform APIs Over Wrapping Them](https://blog.jim-nielsen.com/2024/expose-platform-apis-over-wrapping-them/) : Une critique intéressante de la conception de l'API de métadonnées de Next.js, qui a une courbe d'apprentissage et n'est pas une correspondance directe avec les métabalises HTML. Il compare les compromis avec une solution plus ad-hoc et portable.
+- 📜 [Exploring Authentication in Next.js](https://www.robinwieruch.de/next-authentication/) : Tutoriel complet d'authentification utilisant Next.js 14, App Router, Prisma, Lucia.
 - 📜 [How does useOptimistic() work internally in React?](https://jser.dev/2024-03-20-how-does-useoptimisticwork-internally-in-react/)
 - 📜 [How does use() work internally in React?](https://jser.dev/2024-03-16-how-does-use-work-internally-in-react/)
 - 📜 [How to Add a Sitemap & RSS Feed in Next.js App Router](https://spacejelly.dev/posts/how-to-add-a-sitemap-rss-feed-in-next-js-app-router)
@@ -67,12 +67,12 @@ Don’t be misled by the title, this great article is a great illustration of ho
 - 📜 [Implementing React Hook Form with Next.js 14 and Server Actions](https://aurorascharff.no/posts/implementing-react-hook-form-with-nextjs-14-server-actions/)
 - 📜 [The High-Risk Refactoring](https://webup.org/blog/the-high-risk-refactoring/)
 - 📜 [Next.js with Prisma and SQLite](https://www.robinwieruch.de/next-prisma-sqlite/)
-- 🗓 [React Connection - 22 April](https://reactconnection.io/) + [React-Native Connection - 23 April](https://reactnativeconnection.io/) - 🇫🇷 Paris - 2 days of web/mobile conferences. Get a [20% discount](https://www.billetweb.fr/react-connection-2024?discount=TWIR) with code "TWIR".
-- 📦 [Pragmatic Drag & Drop - Fast drag and drop for any experience on any tech stack](https://github.com/atlassian/pragmatic-drag-and-drop): maintainer of react-beautiful-dnd introduced a new, more powerful, framework-agnostic drag & drop library that Atlassian is now using to power products such as Trello and Confluence. A [GitHub issue and video](https://github.com/atlassian/react-beautiful-dnd/issues/2573) explain possibilities for users of react-beautiful-dnd, which will only receive security fixes. A compatibility package is provided to ease the migration.
-- 📦 [Cally - Small, feature-rich calendar components](https://wicky.nillia.ms/cally/): Modern lightweight calendar components. A page explains [how to integrate with React](https://wicky.nillia.ms/cally/guides/frameworks/#react), although with React 19 integration with Web Components, it’s going to become much easier to use. Does not support SSR yet.
+- 🗓 [React Connection - 22 April](https://reactconnection.io/) + [React-Native Connection - 23 April](https://reactnativeconnection.io/) - 🇫🇷 Paris - 2 jours de conférences web/mobiles. Bénéficiez d'une [réduction de 20%](https://www.billetweb.fr/react-connection-2024?discount=TWIR) avec le code « TWIR ».
+- 📦 [Pragmatic Drag & Drop - Fast drag and drop for any experience on any tech stack](https://github.com/atlassian/pragmatic-drag-and-drop) : Le mainteneur de react-beautiful-dnd a présenté une nouvelle bibliothèque drag & drop, plus puissante et agnostique au niveau du framework, qui est maintenant utilisée par Atlassian pour alimenter des produits tels que Trello et Confluence. Une [issue GitHub et une vidéo](https://github.com/atlassian/react-beautiful-dnd/issues/2573) expliquent les possibilités pour les utilisateurs de react-beautiful-dnd, qui ne recevra que des correctifs de sécurité. Un package de compatibilité est fourni pour faciliter la migration.
+- 📦 [Cally - Small, feature-rich calendar components](https://wicky.nillia.ms/cally/) : Composants de calendrier modernes et légers. Une page explique [comment l'intégrer à React](https://wicky.nillia.ms/cally/guides/frameworks/#react), mais avec l'intégration des Web Components dans React 19, il va devenir beaucoup plus facile à utiliser. Ne supporte pas encore SSR.
 - 📦 [Docusaurus 3.2 - faster dev/build, MDX partial TOC, blog improvements, sitemap lastmod, Vercel Analytics…](https://docusaurus.io/blog/releases/3.2)
 - 📦 [epicweb-dev/react-server-components - Understand React Server Components and Server Actions by building a framework with them](https://github.com/epicweb-dev/react-server-components)
-- 🎥 [UI Engineering - The Curious Case of React's Name](https://www.youtube.com/watch?v=qBymTM6MQLo): A great poetic mini-documentary. This video took 40 hours to produce and only got a few hundred views. Give Philip some love and subscribe to his underrated channel (other videos are more pragmatic).
+- 🎥 [UI Engineering - The Curious Case of React's Name](https://www.youtube.com/watch?v=qBymTM6MQLo) : Un mini-documentaire poétique. Cette vidéo a nécessité 40 heures de travail et n'a été visionnée que quelques centaines de fois. Apportez votre soutien à Philip et abonnez-vous à sa chaîne sous-estimée (les autres vidéos sont plus pragmatiques).
 - 🎥 [Jack Herrington - Are You In A React Cult?](https://www.youtube.com/watch?v=74q1vURXvlY)
 - 🎥 [Lee Robinson - Next.js Explained - How cookies() uses AsyncLocalStorage](https://www.youtube.com/watch?v=JejwWxhsfZw)
 - 🎥 [Ryan Toronto - Where should this component run?](https://www.youtube.com/watch?v=4S3vQffXT7o)
@@ -108,7 +108,7 @@ Cette section est désormais co-écrite avec [Benedikt](https://twitter.com/bndk
 
 [**"New Architecture support in popular libraries"**](https://github.com/reactwg/react-native-new-architecture/discussions/167)
 
-This week's headline news is … a spreadsheet? Yes, indeed. We’re approaching the release of React Native 0.74, which will have the Interop Layer and Bridgeless Mode enabled by default. And although you can still turn it off, the message is clear: It’s time to start adopting the New Architecture. There has been a lot of effort to prepare the RN ecosystem for the New Arch, and now there’s a great spreadsheet tracking New Architecture and Bridgeless Mode support for many popular RN libraries. As you can see in the screenshot above, there’s lots of green already, although plenty of rows require some more work as well. In my opinion, even beyond the pure question of which libraries already support the new paradigms this list is also very interesting if you only want to check out which RN libraries are the most popular ones or which technical challenges library authors face when shifting to the New Arch.
+La grande nouvelle de cette semaine est... une feuille de calcul ? Oui, en effet. Nous approchons de la sortie de React Native 0.74, qui aura le Interop Layer et le Bridgeless Mode activés par défaut. Et bien que vous puissiez encore les désactiver, le message est clair : il est temps de commencer à adopter la nouvelle architecture. Beaucoup d'efforts ont été faits pour préparer l'écosystème RN à la nouvelle architecture, et il existe maintenant une feuille de calcul qui permet de suivre la prise en charge de la nouvelle architecture et du mode Bridgeless pour de nombreuses bibliothèques RN populaires. Comme vous pouvez le voir dans la capture d'écran ci-dessus, il y a déjà beaucoup de vert, bien que de nombreuses lignes nécessitent également un peu plus de travail. À mon avis, au-delà de la question de savoir quelles bibliothèques supportent déjà les nouveaux paradigmes, cette liste est également très intéressante si vous voulez seulement vérifier quelles sont les bibliothèques RN les plus populaires ou quels sont les défis techniques auxquels les auteurs de bibliothèques sont confrontés lorsqu'ils passent à la nouvelle architecture.
 
 ---
 
@@ -117,8 +117,8 @@ This week's headline news is … a spreadsheet? Yes, indeed. We’re approaching
 - 🐦 [Tailwind CSS has TailwindUI. Soon, NativeWind will have NativeWindUI](https://x.com/DanStepanov/status/1773746866536280376)
 - 🐦 [Calling an arbitrary UIKit API from JS, on the UI thread, with no native code – thanks to NativeScript, Node-API, and Reanimated](https://x.com/birch_js/status/1774855694271045666?s=20)
 - 🐦 [Safari extension to see a 3D view of Web DOM on iOS built with Expo config plugin](https://twitter.com/Baconbrix/status/1773418737061773676)
-- 📖 [How to deal with Apple’s privacy request requirement with RN](https://github.com/react-native-community/discussions-and-proposals/discussions/776): Soon, all iOS apps will need to have a “Privacy Manifest.” This GitHub discussion has some guidance on how to accommodate this requirement when using RN.
-- 📜 [Bringing React Sever Components to React Native](https://szymonrybczak.dev/blog/bringing-react-server-components-to-react-native): This is not yet the big technical deep dive, but Szymon says that’s coming. This is more of an introduction to what Server Components will mean for RN.
+- 📖 [How to deal with Apple’s privacy request requirement with RN](https://github.com/react-native-community/discussions-and-proposals/discussions/776) : Bientôt, toutes les applications iOS devront avoir un "manifeste de confidentialité". Cette discussion GitHub fournit des conseils sur la manière de répondre à cette exigence lors de l'utilisation de RN.
+- 📜 [Bringing React Sever Components to React Native](https://szymonrybczak.dev/blog/bringing-react-server-components-to-react-native) : Ce n'est pas encore la grande plongée technique, mais Szymon dit que c'est à venir. Il s'agit plutôt d'une introduction à ce que les composants du serveur signifieront pour RN.
 - 📜 [How to Achieve 60 FPS Animations in React Native](https://www.callstack.com/blog/60fps-animations-in-react-native)
 - 📜 [Why Is It Important to Always Run The Latest Version of React Native?](https://www.callstack.com/blog/always-run-the-latest-version-of-react-native)
 - 📜 [Expo Location background tracking - Not all who wander are lost](https://blog.swmansion.com/not-all-who-wander-are-lost-805811c433c5)
@@ -133,7 +133,7 @@ This week's headline news is … a spreadsheet? Yes, indeed. We’re approaching
 - 🎥 [Daniel Friyia - Build an Expo App with Apple Watch Tutorial](https://www.youtube.com/watch?v=Z6xRCyhrg1A)
 - 🎥 [Simon Grimm - React Native with HTML?](https://www.youtube.com/watch?v=D_14xgyW4Rk)
 - 🎙️ [Rocket Ship 36 - React Native Apps using Web3 & AI with Nader Dabit](https://share.transistor.fm/s/2c3bbd34)
-- 🔗 [react-native-community-map - different online places where React Native developers can be found](https://github.com/kelset/react-native-community-map): Quite exhaustive overview of communities, subreddits, Podcasts, Discord servers, etc.
+- 🔗 [react-native-community-map - different online places where React Native developers can be found](https://github.com/kelset/react-native-community-map) : Aperçu assez exhaustif des communautés, subreddits, podcasts, serveurs Discord, etc.
 
 ---
 
