fix all app.js links

--- a/website/newsletter/180/index.mdx
+++ b/website/newsletter/180/index.mdx
@@ -11,7 +11,7 @@ As expected, it's been a quiet week, with developers taking a break for Easter.
 
 Although we don't have a lot of major releases, we still have a good amount of content and blog posts. I really liked the headline blog post. Only Bun decided to release an outstanding v1.1 release on 1st April, quite a bold move!
 
-React Native developer? Don’t miss [**App.js Conf**](http://app.js) kicking off on 22 May in Kraków 🇵🇱. Get a [10% discount](https://ti.to/appjs/2024/discount/TWIR) with our partner code “TWIR”.
+React Native developer? Don’t miss [**App.js Conf**](https://appjs.co/?utm_source=thisweekinreact) kicking off on 22 May in Kraków 🇵🇱. Get a [10% discount](https://ti.to/appjs/2024/discount/TWIR) with our partner code “TWIR”.
 
 Apart that, stay safe and make sure to check if you are [affected by xz](https://socket.dev/blog/how-to-use-socket-to-find-out-if-you-were-affected-by-the-backdoored-xz-package), a major security vulnerability unveiled recently.
 
