--- a/website/newsletter/182/index.mdx
+++ b/website/newsletter/182/index.mdx
@@ -130,7 +130,7 @@ Evan Bacon answers yes, and gives us a glimpse of what the future might hold in 
 - 🐦 [The Ignite Cookbook site quietly received several new recipes](https://twitter.com/jamonholmgren/status/1778829659775676653): Supabase & PowerSync
 - 🐦 [3D Rendering with RN on Vision Pro](https://twitter.com/o_kwasniewski/status/1780602815167283485)
 - 👀 [rn.new - Pretty neat way to start a new React Native project](https://rn.new)
-- 🗓 [App.js Conf](http://app.js) - 🇵🇱 Kraków - 22-24 May. Get a [10% discount](https://ti.to/appjs/2024/discount/TWIR) with code "TWIR".
+- 🗓 [App.js Conf](https://appjs.co/?utm_source=thisweekinreact) - 🇵🇱 Kraków - 22-24 May. Get a [10% discount](https://ti.to/appjs/2024/discount/TWIR) with code "TWIR".
 - 📜 [Add shapes and textures to 3D animations with React, Expo and ThreeJS](https://www.themorrow.digital/blog/add-shapes-and-textures-to-3d-animations-with-react-expo-and-threejs): Last week, I wrote about an upcoming 3D animation library, but of course there’s already approaches to 3D in RN. This article describes one of them.
 - 📜 [How To Implement Metro's Http Cache](https://andrei-calazans.com/posts/metro-http-cache/): Did you know that Meta uses a central cache for their RN devs, meaning that if one dev has already bundled something, another dev can benefit from the cache result. This article describes how remote HTTP caches work in Metro.
 - 📜 [React Strict DOM: The Future of Universal Apps with React Native](https://blog.theodo.com/2024/04/react-strict-dom-react-native-web/)
