--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/180/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/180/index.mdx
@@ -11,7 +11,7 @@ Comme prévu, la semaine a été calme, les développeurs ayant fait une pause p
 
 Bien que nous n'ayons pas beaucoup de versions majeures, nous avons toujours une bonne quantité de contenu et d'articles de blog. J'ai beaucoup aimé l'article de blog qui fait la une. Seul Bun a décidé de publier une version exceptionnelle de la v1.1 le 1er avril, ce qui est assez audacieux !
 
-Développeur React Native ? Ne manquez pas la [**App.js Conf**](http://app.js) qui débutera le 22 mai à Kraków 🇵🇱. Bénéficiez d'une [réduction de 10 %](https://ti.to/appjs/2024/discount/TWIR) avec notre code partenaire « TWIR ».
+Développeur React Native ? Ne manquez pas la [**App.js Conf**](https://appjs.co/?utm_source=thisweekinreact) qui débutera le 22 mai à Kraków 🇵🇱. Bénéficiez d'une [réduction de 10 %](https://ti.to/appjs/2024/discount/TWIR) avec notre code partenaire « TWIR ».
 
 Par ailleurs, soyez vigilant et vérifiez si vous êtes [affecté par xz](https://socket.dev/blog/how-to-use-socket-to-find-out-if-you-were-affected-by-the-backdoored-xz-package), une importante faille de sécurité dévoilée récemment.
 
