--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/181/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/181/index.mdx
@@ -7,9 +7,9 @@ date: 04-10-2024
 
 Salut à tous !
 
-This week I found many React Core PRs to look at. Too many, in fact, so I've saved a few for next week!
+Cette semaine, j'ai trouvé beaucoup de PR React Core à regarder. Trop, en fait, alors j'en ai gardé quelques-uns pour la semaine prochaine !
 
-After 2D with Skia, it's super excitings to see React Native devs exploring the 3D space!
+Après la 2D avec Skia, c'est super intéressant de voir des développeurs React Native explorer l'espace 3D !
 
 **💡 [Consulter cette newsletter sur Twitter](https://slo.im/thread) - format visuel 🎨**
 
@@ -37,44 +37,44 @@ RevenueCat gives you everything you need to monetize, analyze, and grow your app
 
 [**React Docs - Add onCaughtError / onUncaughtError, improve onRecoverableError**](https://github.com/reactjs/react.dev/pull/6742)
 
-Recently, the React core team overhauled the way errors are handled in React 19. Those improvements are available in React 19 canary releases and should probably land in Next.js 14.2+ sooner or later. This notably includes new public API callbacks available on the React Root (`createRoot`, `hydrateRoot`):
+Récemment, l'équipe principale de React a révisé la façon dont les erreurs sont gérées dans React 19. Ces améliorations sont disponibles dans les versions canary de React 19 et devraient probablement arriver dans Next.js 14.2+ tôt ou tard. Cela inclut notamment de nouveaux callbacks d'API publiques disponibles sur React Root (`createRoot`, `hydrateRoot`) :
 
-- `onCaughtError` 🆕 reports errors caught by error boundaries
-- `onUncaughtError` 🆕 reports uncaught errors (duh)
-- `onRecoverableError` now uses the ES Error Cause feature to report the original cause
+- `onCaughtError` 🆕 signale les erreurs détectées par les périmètres d'erreur (« Error Boundaries »)
+- `onUncaughtError` 🆕 signale les erreurs non capturées (logique)
+- `onRecoverableError` utilise désormais la fonctionnalité ES Error Cause pour signaler la cause initiale
 
-The linked PR is the WIP documentation for those new APIs, including many interactive examples. The main motivation seems to be presenting an error dialog to the user.
+Le PR lié est la documentation en cours d'élaboration pour ces nouvelles API, y compris de nombreux exemples interactifs. La principale motivation semble être de présenter un dialogue d'erreur à l'utilisateur.
 
-What excited me most in all this is that it's the first time I'm able to see in action the brand-new React hydration error message displayed in a dialog, as shown in the screenshot above. This will greatly improve the DX of React!
+Ce qui m'a le plus excité dans tout ça, c'est que c'est la première fois que je peux voir en action le tout nouveau message d'erreur d'hydratation de React affiché dans un dialogue, comme le montre la capture d'écran ci-dessus. Cela va grandement améliorer le DX de React !
 
 ---
 
 - 💸 [Get drop-in authentication for your React app using Clerk, with ready-to-use components, hooks, and helpers.](https://go.clerk.com/WtsedFE)
-- 👀 [React Core - Fast JSX: Don't clone props object](https://github.com/facebook/react/pull/28768): Creating JSX elements under React 19 should become much faster. Recent changes in how key/refs are handled make it possible to avoid cloning props. We create a lot of JSX nodes so this should have a significant impact!
+- 👀 [React Core - Fast JSX: Don't clone props object](https://github.com/facebook/react/pull/28768) : La création d'éléments JSX sous React 19 devrait devenir beaucoup plus rapide. Des changements récents dans la façon dont les clés/refs sont gérées permettent d'éviter le clonage des props. Nous créons beaucoup de nœuds JSX, donc cela devrait avoir un impact significatif !
 - 👀 [React Core - Remove defaultProps support (except for classes)](https://github.com/facebook/react/pull/28733)
 - 👀 [React Core - Rename SECRET INTERNALS](https://github.com/facebook/react/pull/28789)
 - 🐦 [TIL React can render promises and contexts as JSX nodes](https://twitter.com/sebastienlorber/status/1777383298618077331)
-- 📖 [TanStack Query - new Render Optimizations guide](https://tanstack.com/query/v5/docs/framework/react/guides/render-optimizations): It’s nice that React Query uses structural sharing under the hood, and try hard to preserve object identities over time.
-- 📈 [Docusaurus has overtaken Gatsby’s npm downloads](https://npmtrends.com/@docusaurus/core-vs-@remix-run/react-vs-astro-vs-gatsby-vs-nextra-vs-vitepress-vs-vuepress): It feels surreal that the framework I work on is now the 2nd most used React web framework just after Next.js (far behind), despite its focus on content-centric websites. This should not last though: Astro, Remix, and Expo Web have more potential to grow.
-- 🗓 [React Summit](https://reactsummit.com/?utm_source=thisweekinreact) - 🇳🇱 Amsterdam - 14-18 June - Get a 10% discount with code "TWIR".
-- 🗓 [React Connection - 22 April](https://reactconnection.io/) + [React-Native Connection - 23 April](https://reactnativeconnection.io/) - 🇫🇷 Paris - 2 days of web/mobile conferences. Get a [\-20% discount](https://www.billetweb.fr/react-connection-2024?discount=TWIR) with code "TWIR".
-- 📜 [New Flow Language Features for React](https://medium.com/flow-type/announcing-component-syntax-b6c5285660d0): Meta engineers use Flow (and not TypeScript). This post presents the benefits of new keywords `component`, `hook`, and `renders` keywords introduced directly into the language, and presents great benefits in terms of DX, type-safety, and static analysis in general. I wish we had those in TypeScript too, but since it’s specific to React it’s unlikely to happen unless benefiting the whole JS ecosystem.
-- 📜 [Are Inline Styles Faster than CSS?](https://danielnagy.me/posts/Post_tsr8q6sx37pl): Daniel implemented his personal React website in 3 variants and measured several things: HTML/JS size, compression, Web Vitals… Surprisingly, using plain inline styles outperforms other CSS techniques!
-- 📜 [Exploring using Suspense with React Query](https://www.teemutaskula.com/blog/exploring-query-suspense): Nicely explains how you can improve the UX when using React Query. Creates a `useSuspenseQueryDeferred` to avoid showing a Suspense fallback on query key changes.
-- 📜 [React Server Components in a Nutshell](https://thenewstack.io/react-server-components-in-a-nutshell/): Paul takes Waku to illustrate how RSCs enable convenient server-side requests at the component level, while former solutions only supported route level. He also makes an interesting comparison between Gatsby’s static queries and RSCs.
-- 📜 [Jotai Tips](https://blog.axlight.com/posts/jotai-tips/): Daishi aggregated 20 Jotai tips in a single article.
-- 📜 [State machines in React](https://thesametech.com/state-machines-in-react/): Implements a wizard flow by building a state machine from scratch.
-- 📜 [Server-only Code in Next.js App Router](https://www.builder.io/blog/server-only-next-app-router): Use server-only and client-only packages to ensure code runs where it should.
-- 📜 [Next.js Forms with Server Actions](https://www.jtmthf.com/posts/nextjs-forms): A tutorial using Radix Form (in preview) to implement form elements compatible with Server Actions.
-- 📜 [Exploring Server Actions with Next.js](https://www.robinwieruch.de/next-server-actions/): A Tutorial showing how to do each CRUD operation.
-- 📜 [Techniques for Fetching Data - Comparing Next.js, Remix, and RedwoodJS](https://redwoodjs.com/blog/techniques-for-fetching-data): Revisits old data fetching techniques to explain why RSC is better.
+- 📖 [TanStack Query - new Render Optimizations guide](https://tanstack.com/query/v5/docs/framework/react/guides/render-optimizations) : Il est intéressant de constater que React Query utilise le partage structurel sous le capot et s'efforce de préserver l'identité des objets au fil du temps.
+- 📈 [Docusaurus has overtaken Gatsby’s npm downloads](https://npmtrends.com/@docusaurus/core-vs-@remix-run/react-vs-astro-vs-gatsby-vs-nextra-vs-vitepress-vs-vuepress) : Il est surréaliste de constater que le framework sur lequel je travaille est désormais le deuxième framework web React le plus utilisé, juste après Next.js (loin derrière), malgré sa focalisation sur les sites web centrés sur le contenu. Cela ne devrait pas durer : Astro, Remix et Expo Web ont encore plus de potentiel de croissance.
+- 🗓 [React Summit](https://reactsummit.com/?utm_source=thisweekinreact) - 🇳🇱 Amsterdam - 14-18 Juin - Obtenez une réduction de 10 % avec le code « TWIR ».
+- 🗓 [React Connection - 22 April](https://reactconnection.io/) + [React-Native Connection - 23 April](https://reactnativeconnection.io/) - 🇫🇷 Paris - 2 jours de conférences web/mobiles. Bénéficiez d'une [réduction de -20%](https://www.billetweb.fr/react-connection-2024?discount=TWIR) avec le code « TWIR ».
+- 📜 [New Flow Language Features for React](https://medium.com/flow-type/announcing-component-syntax-b6c5285660d0) : Les ingénieurs de Meta utilisent Flow (et non TypeScript). Ce billet présente les avantages des nouveaux mots-clés `component`, `hook`, et `renders` introduits directement dans le langage, et présente de grands avantages en termes de DX, de sécurité de type, et d'analyse statique en général. J'aurais aimé avoir ces mots-clés dans TypeScript aussi, mais comme c'est spécifique à React, il est peu probable que cela se produise à moins que cela ne profite à l'ensemble de l'écosystème JS.
+- 📜 [Are Inline Styles Faster than CSS?](https://danielnagy.me/posts/Post_tsr8q6sx37pl) : Daniel a implémenté son site web React personnel en 3 variantes et a mesuré plusieurs choses : Taille HTML/JS, compression, Web Vitals... Étonnamment, l'utilisation de styles en ligne simples surpasse les autres techniques CSS !
+- 📜 [Exploring using Suspense with React Query](https://www.teemutaskula.com/blog/exploring-query-suspense) : Il explique joliment comment vous pouvez améliorer l'UX en utilisant React Query. Crée un `useSuspenseQueryDeferred` pour éviter d'afficher un fallback Suspense sur les changements de clé de requête.
+- 📜 [React Server Components in a Nutshell](https://thenewstack.io/react-server-components-in-a-nutshell/) : Paul prend Waku pour illustrer comment les RSC permettent des requêtes pratiques côté serveur au niveau des composants, alors que les solutions précédentes ne prenaient en charge que le niveau des routes. Il fait également une comparaison intéressante entre les requêtes statiques de Gatsby et les RSC.
+- 📜 [Jotai Tips](https://blog.axlight.com/posts/jotai-tips/) : Daishi a rassemblé 20 conseils de Jotai dans un seul article.
+- 📜 [State machines in React](https://thesametech.com/state-machines-in-react/) : Implémente un flux assistant en construisant un automate d'état à partir de zéro.
+- 📜 [Server-only Code in Next.js App Router](https://www.builder.io/blog/server-only-next-app-router) : Utilisez des packages uniquement pour le serveur et uniquement pour le client afin de s'assurer que le code s'exécute là où il doit s'exécuter.
+- 📜 [Next.js Forms with Server Actions](https://www.jtmthf.com/posts/nextjs-forms) : Un tutoriel utilisant Radix Form (en avant-première) pour implémenter des éléments de formulaire compatibles avec les Server Actions.
+- 📜 [Exploring Server Actions with Next.js](https://www.robinwieruch.de/next-server-actions/) : Un tutoriel montrant comment effectuer chaque opération CRUD.
+- 📜 [Techniques for Fetching Data - Comparing Next.js, Remix, and RedwoodJS](https://redwoodjs.com/blog/techniques-for-fetching-data) : Revisite les anciennes techniques de récupération de données pour expliquer pourquoi RSC est meilleur.
 - 📜 [React 19 - Part 1: The Backstory; My journey writing a framework from scratch!](https://www.cmrg.me/blog/rsc-part-1-the-backstory)
 - 📜 [Synchronize Backend and Frontend Types With tRPC](https://marmelab.com/blog/2024/04/04/trpc-full-stack-types.html)
 - 📦 [Jotai Effect 1.0 - A Jōtai utility package for reactive side-effects](https://github.com/jotaijs/jotai-effect/releases/tag/v1.0.0)
 - 📦 [Jotai 2.8 - atomWithLazy, experimental store](https://github.com/pmndrs/jotai/releases/tag/v2.8.0)
 - 📦 [react-testing-library 15.0 - requires Node 18, supports new WAI-ARIA 1.2 roles](https://github.com/testing-library/react-testing-library/releases/tag/v15.0.0)
 - 📦 [use-signals - An experimental React hook for TC39 signals](https://github.com/dai-shi/use-signals)
-- 🎥 [Jack Herrington - Declarative Routes for NextJS and React-Router](https://www.youtube.com/watch?v=MiZcNHJT_Ss): Jack introduced [declarative-routing](https://github.com/ProNextJS/declarative-routing), a new typesafe routing solution he’s working on with support for React Router and Next.js. It also supports API routes, which makes it an alternative to tRPC with control over the API endpoints.
+- 🎥 [Jack Herrington - Declarative Routes for NextJS and React-Router](https://www.youtube.com/watch?v=MiZcNHJT_Ss) : Jack a présenté [declarative-routing](https://github.com/ProNextJS/declarative-routing), une nouvelle solution de routage sécurisée sur laquelle il travaille et qui prend en charge React Router et Next.js. Elle prend également en charge les routes API, ce qui en fait une alternative à tRPC avec un contrôle sur les API endpoints.
 - 🎥 [Theo - Facebook wrote a language just for React](https://www.youtube.com/watch?v=HOFIefkepMA)
 - 🎥 [James Quick - Don’t Make This Mistake with Next.js Server Components](https://www.youtube.com/watch?v=F_AplRX3dJU)
 
@@ -106,18 +106,18 @@ Cette section est désormais co-écrite avec [Benedikt](https://twitter.com/bndk
 
 🐦 [**New 3D library for React Native in the works**](https://twitter.com/mrousavy/status/1775840325161853389)
 
-One of the most inspiring things in the RN community is observing folks like Marc Rousavy, William Candillon and Christian Falch pushing the boundaries of what’s possible with this technology and going far beyond rendering text and buttons on a screen. With the recent Skia announcements, we saw the state of the art regarding 2D rendering in RN. Now, Marc provided a sneak peek of some exciting advancements in 3D rendering with RN. Apparently, Margelo is working on a new library to enable access to the native Graphics APIs (Metal/Vulkan) from RN. Apart from the short [demo video](https://twitter.com/JPoliachik/status/1775866218743787934), I also found this [thread](https://twitter.com/mrousavy/status/1775870100945461277) very interesting, where Marc explains their approach using a C++ library and why they didn’t go with Three.js, which is amazing on web (React-Three-Fiber supports RN).
+L'une des choses les plus inspirantes dans la communauté RN est d'observer des gens comme Marc Rousavy, William Candillon et Christian Falch repousser les limites de ce qui est possible avec cette technologie et aller bien au-delà du rendu de texte et de boutons sur un écran. Avec les récentes annonces de Skia, nous avons vu l'état de l'art en matière de rendu 2D dans RN. Aujourd'hui, Marc nous a donné un aperçu de quelques avancées passionnantes en matière de rendu 3D avec RN. Apparemment, Margelo travaille sur une nouvelle bibliothèque pour permettre l'accès aux API graphiques natives (Metal/Vulkan) à partir de RN. Outre la courte [vidéo de démonstration](https://twitter.com/JPoliachik/status/1775866218743787934), j'ai également trouvé ce [fil de discussion](https://twitter.com/mrousavy/status/1775870100945461277) très intéressant, où Marc explique leur approche en utilisant une bibliothèque C++ et pourquoi ils n'ont pas choisi Three.js, qui est incroyable sur le web (React-Three-Fiber prend en charge RN).
 
 ---
 
 - 💸 [React Library Analytics — Omlet helps you understand which components and props to keep, remove, or improve based on real usage data.](https://omlet.dev/?utm_campaign=partner_this-week-in-react_newsletter-rn-ql-apr-2024)
-- 🐦 [VisionCamera rendering straight to Skia](https://twitter.com/mrousavy/status/1776326923674661065): This will come with Vision Camera 4, which seems to be nearing its release.
-- 📣 [Expo - Orbit is now available as a Preview for Windows](https://expo.dev/blog/expo-orbit-now-available-as-a-preview-for-windows): If you don’t know Orbit yet, it’s a handy menu bar app to launch builds on Simulator.
+- 🐦 [VisionCamera rendering straight to Skia](https://twitter.com/mrousavy/status/1776326923674661065) : Elle sera accompagnée de la Vision Camera 4, dont la sortie semble proche.
+- 📣 [Expo - Orbit is now available as a Preview for Windows](https://expo.dev/blog/expo-orbit-now-available-as-a-preview-for-windows) : Si vous ne connaissez pas encore Orbit, il s'agit d'une application pratique de la barre de menu pour lancer des builds sur Simulator.
 - 📣 [Expo - Push notification receipt IDs will change string formats](https://expo.dev/blog/push-receipt-id-format-will-change)
-- 📖 [Gestures in RN Gesture Handler are state machines](https://docs.swmansion.com/react-native-gesture-handler/docs/fundamentals/states-events/#state-flows): now the docs have an excellent interactive visualization to understand them.
-- 🗓 [App.js Conf](https://appjs.co/?utm_source=thisweekinreact) - 🇵🇱 Kraków - 22-24 May. Get a [10% discount](https://ti.to/appjs/2024/discount/TWIR) with code "TWIR".
-- 📜 [Truly Selectable Text with React Native on iOS](https://haileyok.com/truly-selectable-text-with-react-native-on-ios/): Everyone who has at some point in time tried to make text selectable (as in, parts of a text, not just copy a whole text element) in RN will appreciate this post and the accompanying library.
-- 📜 [How To Dockerize A React Native App?](https://scientyficworld.org/how-to-dockerize-a-react-native-app/) Good summary of running RN dev setup in Docker. For me, the main issue remains that you can’t do iOS builds in Docker, which makes this only half as interesting, but in some scenarios it still makes sense (e.g. if you don’t run local native builds at all).
+- 📖 [Gestures in RN Gesture Handler are state machines](https://docs.swmansion.com/react-native-gesture-handler/docs/fundamentals/states-events/#state-flows) : Les documents sont désormais accompagnés d'une excellente visualisation interactive pour les comprendre.
+- 🗓 [App.js Conf](https://appjs.co/?utm_source=thisweekinreact) - 🇵🇱 Kraków - 22-24 mai. Bénéficiez d'une [réduction de 10 %] (https://ti.to/appjs/2024/discount/TWIR) avec le code « TWIR ».
+- 📜 [Truly Selectable Text with React Native on iOS](https://haileyok.com/truly-selectable-text-with-react-native-on-ios/) : Tous ceux qui, à un moment ou à un autre, ont essayé de rendre du texte sélectionnable (c'est-à-dire des parties d'un texte, et pas seulement la copie d'un élément de texte entier) dans RN apprécieront cet article et la bibliothèque qui l'accompagne.
+- 📜 [How To Dockerize A React Native App?](https://scientyficworld.org/how-to-dockerize-a-react-native-app/) : Un bon résumé de l'utilisation de RN dev setup dans Docker. Pour moi, le problème principal reste que vous ne pouvez pas faire de builds iOS dans Docker, ce qui rend cette solution deux fois moins intéressante, mais dans certains scénarios, elle a encore du sens (par exemple, si vous n'exécutez pas du tout de builds natifs locaux).
 - 📜 [How to improve your React Native 3D animations: camera control with Three.js](https://www.themorrow.digital/blog/how-to-improve-your-react-native-3d-animations-camera-control-with-three-js)
 - 📜 [Set up Detox for end-to-end testing in your React Native App](https://thoughtbot.com/blog/set-up-detox-for-end-to-end-testing-in-your-react-native-app)
 - 📜 [The Easiest Way to Build Reactive Local-First Apps with TinyBase and PowerSync](https://bndkt.com/blog/2024/the-easiest-way-to-build-reactive-local-first-apps-with-tinybase-and-powersync)
