--- a/website/newsletter/183/index.mdx
+++ b/website/newsletter/183/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: /183
-title: "This Week In React #183: ..."
-authors: [slorber]
+title: "This Week In React #183: Vercel on edge, React Native on fire: Remix Single Fetch, Signals, RN 0.74, React Native IDE, VisionCamera 4"
+authors: [bndkt]
 date: 04-24-2024
 unlisted: true
 ---
