Fix file extension

--- a/website/newsletter/183/index.mdx
+++ b/website/newsletter/183/index.mdx
@@ -10,11 +10,9 @@ Hi everyone!
 
 <Todo />
 
-*    🗓 [](https://reactconnection.io/)[App.js Conf](https://appjs.co/?utm_source=thisweekinreact) - 🇵🇱 Kraków - 22-24 May. Get a [](https://www.billetweb.fr/react-connection-2024?discount=TWIR)[10% discount](https://ti.to/appjs/2024/discount/TWIR) with code "TWIR".
-    
-*   🗓 [React Summit](https://reactsummit.com/?utm_source=thisweekinreact) - 🇳🇱 Amsterdam - 14-18 June - Get a 10% discount with code "TWIR".
-    
-*   ReactSummit 22-26 April - Interview with an influencer (I will share with you as soon as it is published).
+- 🗓 [](https://reactconnection.io/)[App.js Conf](https://appjs.co/?utm_source=thisweekinreact) - 🇵🇱 Kraków - 22-24 May. Get a [](https://www.billetweb.fr/react-connection-2024?discount=TWIR)[10% discount](https://ti.to/appjs/2024/discount/TWIR) with code "TWIR".
+- 🗓 [React Summit](https://reactsummit.com/?utm_source=thisweekinreact) - 🇳🇱 Amsterdam - 14-18 June - Get a 10% discount with code "TWIR".
+- ReactSummit 22-26 April - Interview with an influencer (I will share with you as soon as it is published).
 
 <!-- truncate -->
 
@@ -78,18 +76,12 @@ Vercel’s VP of Product, Lee Rob, explained on X that Vercel is “reverting al
 
 Key features 🌟 include:
 
-*   **Build AI Chat Interfaces In Minutes** - High quality conversational AI interfaces with a few lines of code.
-    
-*   **React Components & Hooks** - `<AiChat />` for UI and `useChatAdapter` hook for easy integration.
-    
-*   **Flexible Adapters** - For `ChatGPT`, `LangChain` and `HuggingFace`, and an API to **Create Your Own Adapter** for any backend.
-    
-*   **Synchronise UI state with AI backends** in an optimal way.
-    
-*   **Markdown Streaming** - Render LLM markdown as it's being generated.
-    
-*   **Zero Dependencies** - Lightweight codebase.
-    
+- **Build AI Chat Interfaces In Minutes** - High quality conversational AI interfaces with a few lines of code.
+- **React Components & Hooks** - `<AiChat />` for UI and `useChatAdapter` hook for easy integration.
+- **Flexible Adapters** - For `ChatGPT`, `LangChain` and `HuggingFace`, and an API to **Create Your Own Adapter** for any backend.
+- **Synchronise UI state with AI backends** in an optimal way.
+- **Markdown Streaming** - Render LLM markdown as it's being generated.
+- **Zero Dependencies** - Lightweight codebase.
 
 More info, examples and documentation on [nlux.dev](https://nlux.dev?c-twr2-p1)
 
@@ -100,9 +92,8 @@ More info, examples and documentation on [nlux.dev](https://nlux.dev?c-twr2-p1)
 [![React Native 0.74 released, React Native IDE is now in beta](/emails/issues/183/rn183.jpg)](https://reactnative.dev/blog/2024/04/22/release-0.74)
 
 📦 [React Native 0.74 released](https://reactnative.dev/blog/2024/04/22/release-0.74)
-  
-This week saw the release of React Native 0.74, a major milestone for the community! The latest version makes “bridgeless mode” the default for new projects using the New Architecture (with the next release, 0.75, the New Arch will become the default, too). Both can still be turned off if needed, but they clearly represent the future of React Native, and over the last months especially, A LOT of libraries have added support for both. But there’s more: RN 0.74 includes Yoga 3.0. There are very few breaking changes and deprecations, but it’s still worth checking them out in the [release notes](https://reactnative.dev/blog/2024/04/22/release-0.74).
 
+This week saw the release of React Native 0.74, a major milestone for the community! The latest version makes “bridgeless mode” the default for new projects using the New Architecture (with the next release, 0.75, the New Arch will become the default, too). Both can still be turned off if needed, but they clearly represent the future of React Native, and over the last months especially, A LOT of libraries have added support for both. But there’s more: RN 0.74 includes Yoga 3.0. There are very few breaking changes and deprecations, but it’s still worth checking them out in the [release notes](https://reactnative.dev/blog/2024/04/22/release-0.74).
 
 📦 [React Native IDE is now in beta](https://ide.swmansion.com/)
 
@@ -116,7 +107,7 @@ Another exciting news this week is the closed beta for React Native IDE, develop
 - 📜 [Expo Blog: Save users from deleting your app with expo-quick-actions](https://expo.dev/blog/expo-quick-actions)
 - 📜 [Creating a React Native “Curved Bottom Bar” with Handwritten SVG](https://kyleshevlin.com/react-native-curved-bottom-bar-with-handwritten-svg/)
 - 📜 [Microsoft is retiring App Center: Here’s what React Native developers should use instead](https://shift.infinite.red/microsoft-is-retiring-app-center-heres-what-react-native-developers-should-use-instead-c2a8786f971e)
-- 📦 [React Native VisionCamera V4: Draw directly on camera frames with Skia, lots of Android bug fixes](https://github.com/mrousavy/react-native-vision-camera/releases/tag/v4.0.0) 
+- 📦 [React Native VisionCamera V4: Draw directly on camera frames with Skia, lots of Android bug fixes](https://github.com/mrousavy/react-native-vision-camera/releases/tag/v4.0.0)
 - 📦 [react-native-svg 15.2.0 adds support for RN 0.74 on New Architecture](https://github.com/software-mansion/react-native-svg/releases/tag/v15.2.0)
 - 🎙️ [RNR 294 - Goodbye, App Center!](https://reactnativeradio.com/episodes/rnr-294-rip-app-center-and-other-news)
 - 🎥 [Behind the Scenes of React Native 0.74 Release | The React Native Show Podcast: Coffee Talk #18](https://www.youtube.com/watch?v=bLHubdUE2Ew)
@@ -128,11 +119,11 @@ Another exciting news this week is the closed beta for React Native IDE, develop
 
 ## 🔀 Other {#other}
 
-- 🐦 [Fetch API has built-in timeout support](https://x.com/goenning/status/1781290404211814903)    
+- 🐦 [Fetch API has built-in timeout support](https://x.com/goenning/status/1781290404211814903)
 - 📜 [WebKit: Help us invent CSS Grid Level 3, aka “Masonry” layout](https://webkit.org/blog/15269/help-us-invent-masonry-layouts-for-css-grid-level-3/)
 - 📜 [An intro to TSConfig for JavaScript Developers](https://deno.com/blog/intro-to-tsconfig)
 - 📜 [Latency numbers every frontend developer should know](https://vercel.com/blog/latency-numbers-every-web-developer-should-know)
-- 📖 [The Front End Developer/Engineer Handbook 2024 — A Guide to Modern Web Development](https://frontendmasters.com/blog/front-end-developer-handbook-2024/): Free eBook**
+- 📖 [The Front End Developer/Engineer Handbook 2024 — A Guide to Modern Web Development](https://frontendmasters.com/blog/front-end-developer-handbook-2024/): Free eBook\*\*
 - 📦 [ESLint v9.1.0 released](https://eslint.org/blog/2024/04/eslint-v9.1.0-released/)
 - 📦 [Chrome 125 beta - CSS Anchor Positioning, CSS stepped functions, …](https://developer.chrome.com/blog/chrome-125-beta?hl=en)
 - 📦 [Electron 30.0.0](https://www.electronjs.org/blog/electron-30-0)
@@ -141,6 +132,6 @@ Another exciting news this week is the closed beta for React Native IDE, develop
 
 ## 🤭 Fun {#fun}
 
-[![Vercel updated their logo](/emails/issues/183/meme183.jpg)](https://x.com/bentonnnnnn/status/1781186098800267421)
+[![Vercel updated their logo](/emails/issues/183/meme183.png)](https://x.com/bentonnnnnn/status/1781186098800267421)
 
 See ya! 👋
