--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/authors.yml
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/authors.yml
@@ -3,3 +3,8 @@ slorber:
   title: Editeur - Mainteneur de Docusaurus
   url: https://sebastienlorber.com
   image_url: https://github.com/slorber.png
+bndkt:
+  name: Benedikt Müller
+  title: Indie Hacker
+  url: https://bndkt.com
+  image_url: https://github.com/bndkt.png
