--- a/website/newsletter/183/index.mdx
+++ b/website/newsletter/183/index.mdx
@@ -132,6 +132,6 @@ Another exciting news this week is the closed beta for React Native IDE, develop
 
 ## 🤭 Fun {#fun}
 
-[![Vercel updated their logo](/emails/issues/183/meme183.png)](https://x.com/bentonnnnnn/status/1781186098800267421)
+[![Vercel updated their logo](/emails/issues/183/meme183.jpg)](https://x.com/bentonnnnnn/status/1781186098800267421)
 
 See ya! 👋
