--- a/website/newsletter/183/index.mdx
+++ b/website/newsletter/183/index.mdx
@@ -112,6 +112,7 @@ Another exciting news this week is the closed beta for React Native IDE, develop
 - 🎙️ [RNR 294 - Goodbye, App Center!](https://reactnativeradio.com/episodes/rnr-294-rip-app-center-and-other-news)
 - 🎥 [Behind the Scenes of React Native 0.74 Release | The React Native Show Podcast: Coffee Talk #18](https://www.youtube.com/watch?v=bLHubdUE2Ew)
 - 🎥 [React Native Multiplayer with Supabase Realtime and Skia](https://www.youtube.com/watch?v=rqbu-nGkOgw)
+- 🎥 [React Native Bridgeless Mode for Dummies](https://www.youtube.com/watch?v=K5HBIKAjZ4U)
 
 - 💸 [React Native Analytics — Omlet is a New Tool to Analyze Component Usage. See Trends to Improve Code and Boost Component Adoption.](https://omlet.dev/?utm_campaign=partner_this-week-in-react_newsletter-rn-ql-apr-2024)
 
