--- a/website/newsletter/183/index.mdx
+++ b/website/newsletter/183/index.mdx
@@ -124,6 +124,7 @@ Another exciting news this week is the closed beta for React Native IDE, develop
 - 📜 [WebKit: Help us invent CSS Grid Level 3, aka “Masonry” layout](https://webkit.org/blog/15269/help-us-invent-masonry-layouts-for-css-grid-level-3/)
 - 📜 [An intro to TSConfig for JavaScript Developers](https://deno.com/blog/intro-to-tsconfig)
 - 📜 [Latency numbers every frontend developer should know](https://vercel.com/blog/latency-numbers-every-web-developer-should-know)
+- 📜 [Deep Dive into Rspack & Webpack Tree Shaking](https://github.com/orgs/web-infra-dev/discussions/17)
 - 📖 [The Front End Developer/Engineer Handbook 2024 — A Guide to Modern Web Development](https://frontendmasters.com/blog/front-end-developer-handbook-2024/): Free eBook\*\*
 - 📦 [ESLint v9.1.0 released](https://eslint.org/blog/2024/04/eslint-v9.1.0-released/)
 - 📦 [Chrome 125 beta - CSS Anchor Positioning, CSS stepped functions, …](https://developer.chrome.com/blog/chrome-125-beta?hl=en)
