--- a/website/newsletter/183/index.mdx
+++ b/website/newsletter/183/index.mdx
@@ -54,7 +54,7 @@ Vercel’s VP of Product, Lee Rob, explained on X that Vercel is “reverting al
 - 📜 [Localized link tags for SEO in Remix](https://react-japan.dev/en/blog/localized-link-tags-for-seo-in-remix)
 - 📜 [How Solid Made Me A Better React Developer](https://www.brenelz.com/posts/how-solid-made-me-a-better-react-developer/)
 - 📜 [Improving INP in React and Next.js](https://www.thisdot.co/blog/improving-inp-in-react-and-next-js): Interaction to Next Paint has recently replaced First Input Delay (FID) as a core web vital; this post details how to optimize it.
-- 📜 [Did Signals Just Land in React?](https://www.paulie.dev/articles/2024/04/did-signals-just-land-in-react/): Spoiler Alert: No, it didn’t. But there’s still a way to try signals in React.
+- 📜 [Did Signals Just Land in React?](https://thenewstack.io/did-signals-just-land-in-react/): Spoiler Alert: No, it didn’t. But there’s still a way to try signals in React.
 - 📦 [Remix 2.9 adds Single Fetch (unstable)](https://github.com/remix-run/remix/blob/main/CHANGELOG.md)
 - 🎙️ [Off The Main Thread Podcast: Putting React In The Browser](https://offthemainthread.tech/episode/putting-react-in-the-browser/)
 - 🎥 [Easy Stripe Integration in your Remix.run App](https://www.youtube.com/watch?v=BaEbhSCRy3g)
